--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -41,7 +41,7 @@
                                     <div class="col-lg-4">
                                         <div class="mb-4">
                                             <label class="form-label">Product Discount</label>
-                                            <input placeholder="%" min="0" type="number" class="form-control" id="product_discount" name="product_discount" oninput="validateProductDiscount()">
+                                            <input placeholder="%" min="0" type="number" class="form-control" value="<%=product.productDiscount%>" id="product_discount" name="product_discount" oninput="validateProductDiscount()">
                                             <span id="errorProductDiscount" class="text-danger"></span>
                                         </div>
                                     </div>
