--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -67,11 +67,11 @@
                                 </div>
                                 
                                 <div class="left">
-                                    <img src="/admin-assets/imgs/productImages/<%= product.image[0] %>" class="img-sm img-thumbnail" alt="Item">
-                                    <img src="/admin-assets/imgs/productImages/<%= product.image[1] %>" class="img-sm img-thumbnail" alt="Item">
-                                    <img src="/admin-assets/imgs/productImages/<%= product.image[2] %>" class="img-sm img-thumbnail" alt="Item">
-                                    <img src="/admin-assets/imgs/productImages/<%= product.image[3] %>" class="img-sm img-thumbnail" alt="Item">
-                                    <img src="/admin-assets/imgs/productImages/<%= product.image[4] %>" class="img-sm img-thumbnail" alt="Item">
+                                    <img style="width: 50px; height: 50px;" src="/admin-assets/imgs/productImages/<%= product.image[0] %>" class="img-sm img-thumbnail" alt="Item">
+                                    <img  style="width: 50px; height: 50px;" src="/admin-assets/imgs/productImages/<%= product.image[1] %>" class="img-sm img-thumbnail" alt="Item">
+                                    <img style="width: 50px; height: 50px;" src="/admin-assets/imgs/productImages/<%= product.image[2] %>" class="img-sm img-thumbnail" alt="Item">
+                                    <img style="width: 50px; height: 50px;" src="/admin-assets/imgs/productImages/<%= product.image[3] %>" class="img-sm img-thumbnail" alt="Item">
+                                    <img  style="width: 50px; height: 50px;" src="/admin-assets/imgs/productImages/<%= product.image[4] %>" class="img-sm img-thumbnail" alt="Item">
                                 </div>
                                 <div class="input-upload">
                                     <div id="imagePreviewContainer" class="image-preview-container"></div>
