--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -93,31 +93,7 @@
     </aside>
     <main class="main-wrap">
         <header class="main-header navbar">
-          <% if(typeof Search != "undefined" && Search){ %>
-            <div class="col-search">
-              <form class="searchform">
-                  <div class="input-group">
-                      <input list="search_terms" type="text" class="form-control" placeholder="Search term" name="search" value="<%=searchTerm %>">
-                      <button class="btn btn-light bg" type="submit" value="search"> <i class="material-icons md-search"></i></button>
-                  </div>
-              </form>
-          </div>
-          <% }else{ %>
-            <div class="col-search">
-              <form class="searchform">
-                  <div class="input-group">
-                      <input list="search_terms" type="text" class="form-control" placeholder="Search term">
-                      <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
-                  </div>
-                  <!-- <datalist id="search_terms">
-                      <option value="Products">
-                      <option value="New orders">
-                      <option value="Apple iphone">
-                      <option value="Ahmed Hassan">
-                  </datalist> -->
-              </form>
-          </div>
-          <% } %>
+            <div></div>
 
             <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
