--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -221,7 +221,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="/gadgetly"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
+                        <a href="/gadgetly"><img width="50px" height="50px" src="/assets/imgs/theme/FunForge.png" alt="logo"></a>
                     </div>
                     <div class="header-right">
                       <%if(typeof productSearch !="undefined" && productSearch){ %>
@@ -301,7 +301,7 @@
             <div class="container">
                 <div class="header-wrap header-space-between position-relative">
                     <div class="logo logo-width-1 d-block d-lg-none">
-                        <a href="index.html"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
+                        <a href="/gadgetly"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
                     </div>
                     <div class="header-nav d-none d-lg-flex">
                         <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block">
