--- a/views/user/otpValidation.ejs
+++ b/views/user/otpValidation.ejs
@@ -180,10 +180,10 @@
                                         <div class="heading_s1">
                                             <h3 class="mb-30">OTP VALIDATION</h3>
                                         </div>
-                                        <%if(typeof signup !=undefined){ %>
+                                        <%if(typeof signup !== "undefined" && signup == 1){ %>
                                             <form method="post" action="/gadgetly/signupotpvalidation/?id=<%= user._id %>">  
                                         <% }else{ %>
-                                            <form method="post" action="/gadgetly/otpvalidation/?id=<%= user._id %>"></form>
+                                            <form method="post" action="/gadgetly/otpvalidation/?id=<%= user._id %>">
                                         <% } %>
                                             <div class="form-group">
                                                 <input type="text" required name="otp" placeholder="Enter OTP"  >
